<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/chk_chocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/choice_chocolate" />

    <CheckBox
        android:id="@+id/chk_sprinkles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/choice_sprinkles" />

    <CheckBox
        android:id="@+id/chk_crashed_nuts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/choice_crashed_nuts" />

    <CheckBox
        android:id="@+id/chk_cherries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/choice_cherries" />

    <CheckBox
        android:id="@+id/chk_orio_cookie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/choice_orio_cookie" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/choice_submit"
        android:onClick="OnSubmit" />

</LinearLayout>